# ElfReader

./: CMakeLists.txt
includes/: ElfReader.h  NinjaCallback.h
src/: ElfReader.cpp  ElfReaderTest.cpp  test.cpp
